assets/css/styles.css
@font-face {
  font-family: "Love Ya Like A Sister";
  src: url(../fonts/Love_Ya_Like_A_Sister/LoveYaLikeASister-Regular.ttf);
  font-weight: 400;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Love Ya Like A Sister", cursive;
}

body {
  width: 100vw;
  height: 99vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.questionDiv {
  max-width: 703px;
  width: 40%;
  text-align: center;
  h1 {
    margin-bottom: 20px;
  }
  button {
    padding: 7px 14px;
    cursor: pointer;
    transition: 70ms;
  }
}

